--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -16,7 +16,7 @@
         <script>
         @* http://docs.jquery.com/UI/Datepicker *@
         $(document).ready(function() {
-            $(".datepicker").datepicker({altFormat: "yymmdd"});
+            $(".datepicker").datepicker({ dateFormat: "yy-mm-dd" });
         });
         </script>
 
