Bootstrap 2.0 work. Creating nice clean forms.

--- a/app/views/listWorkoutLocations.scala.html
+++ b/app/views/listWorkoutLocations.scala.html
@@ -22,7 +22,7 @@ if(orderBy == scala.math.abs(currentOrderBy)) -currentOrderBy else orderBy
 }
 
 
-@main((Messages("page.title.workouts.club")).toString, 'listUsers) {
+@main(Messages("page.title.workouts.location"), 'listWorkoutLocations) {
 
     @* TODO: figure out how to put company name here... *@
     <h2>@Messages("workouts.location.header")</h2>
