More bootstrap 2.0 fixes/changes.

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -3,8 +3,8 @@
 @main(Messages("page.title.index"), 'home) {
 
 @flash.get("success").map { message =>
-<div class="alert-message warning">
-    <strong>Messages("flash.done")</strong> @message
+<div class="alert alert-success">
+    <strong>@Messages("flash.done")</strong> @message
 </div>
 }
 
