--- a/app/views/userEdit.scala.html
+++ b/app/views/userEdit.scala.html
@@ -1,55 +1,66 @@
-@(userForm: Form[User])(implicit flash: Flash, session: play.api.mvc.Session)
-
-@import helper._
-@import helper.twitterBootstrap._
-
-@title = {
-Sign Up <small><a href="">Or edit an existing user</a></small>
-}
+@(form: Form[User])(implicit flash: Flash, session: play.api.mvc.Session)
 
 @main("Account Edit", 'userEdit) {
 
+    <h1>@Messages("login.header") - Update Your Account</h1>
 
-
-@helper.form(action = routes.WebApp.userSubmit()) {
-
-        <fieldset>
-
-            <h1>Update Your Account</h1>
-
-            @if(userForm.hasErrors) {
-            <div class="alert-message error">
-                <p><strong>Oops!</strong> Please correct the problems</p>
-            </div>
-            }
-
-            @flash.get("success").map { message =>
-            <div class="alert-message warning">
-                <strong>Success!</strong> @message
-            </div>
-            }
-
-            <div id="actions" class="twipsies well">
-
-                <p>@*First Name *@<input type="text" name="firstName" id="firstName" placeholder="First name" value="@userForm("firstName").value"></p>
-
-                <p>@*Last Name *@<input type="text" name="lastName" id="lastName" placeholder="Last name" value="@userForm("lastName").value"></p>
-
-                <p>@*Email Address *@<input type="email" name="email" placeholder="Email" id="email" value="@userForm("email").value"></p>
-
-                <p>@*New Password *@<input type="password" name="password" id="password" placeholder="Optional new password"></p>
-                <p class="note">
-                    A new password is optional. Leave this blank to keep your current password.
-                </p>
-            </div>
-
-        </fieldset>
-
-        <div class="actions">
-            <input type="submit" class="btn primary" value="Save">
-            <a href="@routes.WebApp.index" class="btn">Cancel</a>
-        </div>
-
+    @form.globalError.map { error =>
+    <p class="alert alert-error">
+        @error.message
+    </p>
     }
+
+    @flash.get("success").map { message =>
+    <div class="alert alert-success">
+        <strong>@Messages("login.flash.success")</strong> @message
+    </div>
+    }
+
+    <div class="row">
+        <div class="span8">
+            <form action="@routes.WebApp.userSubmit()"  method="POST" class="form-horizontal">
+                <fieldset>
+                    <legend></legend>
+                    <div class="control-group">
+                        <label class="control-label" for="firstName"></label>
+                        <div class="controls">
+                            <input type="text" name="firstName" id="firstName" class="input-xlarge" placeholder="First Name"  value="@form("firstName").value">
+                            <p class="help-block"></p>
+                        </div>
+                    </div>
+
+                    <div class="control-group">
+                        <label class="control-label" for="lastName"></label>
+                        <div class="controls">
+                            <input type="text" name="lastName" id="lastName" class="input-xlarge" placeholder="Last Name"  value="@form("lastName").value">
+                            <p class="help-block"></p>
+                        </div>
+                    </div>
+
+                    <div class="control-group">
+                        <label class="control-label" for="email"></label>
+                        <div class="controls">
+                            <input type="email" name="email" id="email" class="input-xlarge" placeholder="Email"  value="@form("email").value">
+                            <p class="help-block"></p>
+                        </div>
+                    </div>
+
+                    <div class="control-group">
+                        <label class="control-label" for="password"></label>
+                        <div class="controls">
+                            <input type="password" name="password" id="password" class="input-xlarge" placeholder="Optional new password" >
+                            <p class="help-block">Leave this blank to keep your current password.</p>
+                        </div>
+                    </div>
+
+                    <div class="form-actions">
+                        <button type="submit" class="btn btn-primary">@Messages("save.button")</button>
+                        @* <button type="cancel" class="btn btn-primary">@Messages("cancel.button")</button> *@
+                    </div>
+
+                </fieldset>
+            </form>
+        </div>
+    </div>
 
 }
