--- a/app/views/userList.scala.html
+++ b/app/views/userList.scala.html
@@ -23,92 +23,97 @@ if(orderBy == scala.math.abs(currentOrderBy)) -currentOrderBy else orderBy
 
 @main("User List", 'userList)  {
 
-<h1>@Messages("User List", currentPage.total)</h1>
+    <h1>@Messages("User List", currentPage.total)</h1>
 
-@flash.get("success").map { message =>
-<div class="alert-message warning">
-    <strong>Done!</strong> @message
-</div>
-}
-
-<div id="actions">
-
-    @helper.form(action=routes.WebApp.userList()) {
-    <a class="btn success  pull-right" id="add" href="@routes.WebApp.userEdit()">Add a new user</a>
-
-    <input type="search" id="searchbox" name="f" value="@currentFilter" placeholder="Filter by last name...">
-    <input type="submit" id="searchsubmit" value="Filter by name" class="btn primary">
+    @flash.get("success").map { message =>
+    <div class="alert alert-success">
+        <strong>Done!</strong> @message
+    </div>
     }
 
+    <div class="row">
+        <div class="span12">
+            <form action="@routes.WebApp.userList()" class="well form-search">
 
-</div>
+                <button id="add" class="btn btn-success pull-right" href="@routes.WebApp.userEdit()">@Messages("user.add.button")</button>
 
-@Option(currentPage.items).filterNot(_.isEmpty).map { users =>
+                <input type="search" name="f" id="searchbox" value="@currentFilter" class="input-medium search-query" placeholder="Filter by last name..."  >
 
-<table class="users zebra-striped">
-    <thead>
-    <tr>
-        @header(2, "Last Name")
-        @header(3, "First Name")
-        @header(4, "Email")
-        @header(5, "Role")
-    </tr>
-    </thead>
-    <tbody>
+                <button type="submit" id="searchsubmit" class="btn btn-primary">@Messages("go.button")</button>
 
-    @users.map {
-    case (u) => {
-    <tr>
-        <td>@*<a href="@routes.WebApp.userEdit()">*@ @u.lastName</a></td>
-        <td>
-            @u.firstName
-        </td>
-        <td>
-            @u.email
-        </td>
-        <td>
-            Admin
-        </td>
-    </tr>
-    }
-    }
+            </form>
+        </div>
+    </div>
 
-    </tbody>
-</table>
 
-<div id="pagination" class="pagination">
-    <ul>
-        @currentPage.prev.map { page =>
-        <li class="prev">
-            <a href="@link(page)">&larr; Previous</a>
-        </li>
-        }.getOrElse {
-        <li class="prev disabled">
-            <a>&larr; Previous</a>
-        </li>
+    @Option(currentPage.items).filterNot(_.isEmpty).map { users =>
+
+        <table class="table table-striped table-bordered table-condensed">
+            <thead>
+            <tr>
+                @header(2, "Last Name")
+                @header(3, "First Name")
+                @header(4, "Email")
+                @header(5, "Role")
+            </tr>
+            </thead>
+            <tbody>
+
+            @users.map {
+            case (u) => {
+            <tr>
+                <td>@*<a href="@routes.WebApp.userEdit()">*@ @u.lastName</a></td>
+                <td>
+                    @u.firstName
+                </td>
+                <td>
+                    @u.email
+                </td>
+                <td>
+                    Admin
+                </td>
+            </tr>
+            }
+            }
+
+            </tbody>
+        </table>
+
+        @if(currentPage.total >= User.pageLength ) {
+            <div id="pagination" class="pagination">
+                <ul>
+                    @currentPage.prev.map { page =>
+                    <li class="prev">
+                        <a href="@link(page)">&larr; Previous</a>
+                    </li>
+                    }.getOrElse {
+                    <li class="prev disabled">
+                        <a>&larr; Previous</a>
+                    </li>
+                    }
+                    <li class="current">
+                        <a>Displaying @(currentPage.offset + 1) to @(currentPage.offset + users.size) of @currentPage.total</a>
+                    </li>
+                    @currentPage.next.map { page =>
+                    <li class="next">
+                        <a href="@link(page)">Next &rarr;</a>
+                    </li>
+                    }.getOrElse {
+                    <li class="next disabled">
+                        <a>Next &rarr;</a>
+                    </li>
+                    }
+                </ul>
+            </div>
         }
-        <li class="current">
-            <a>Displaying @(currentPage.offset + 1) to @(currentPage.offset + users.size) of @currentPage.total</a>
-        </li>
-        @currentPage.next.map { page =>
-        <li class="next">
-            <a href="@link(page)">Next &rarr;</a>
-        </li>
-        }.getOrElse {
-        <li class="next disabled">
-            <a>Next &rarr;</a>
-        </li>
-        }
-    </ul>
-</div>
 
-}.getOrElse {
+    }.getOrElse {
 
-<div class="well">
-    <em>Nothing to display</em>
-</div>
+    <div class="well">
+        <em>Nothing to display</em>
+    </div>
 
-}
+    }
 
 
 }
