--- a/app/views/menuBar.scala.html
+++ b/app/views/menuBar.scala.html
@@ -3,17 +3,17 @@
 <div class="navbar navbar-fixed-top">
     <div class="navbar-inner">
         <div class="container">
-            <a class="brand" href="@routes.WebApp.index()">S2</a>
+            <a class="brand" href="@routes.MiscController.index()">S2</a>
             <ul class="nav">
              @* Don't show any menu items for now...
-                <li class="@{if(active == 'home) "active" else "inactive"}"><a href="@routes.WebApp.index()">@Messages("menu.home")</a></li>
+                <li class="@{if(active == 'home) "active" else "inactive"}"><a href="@routes.MiscController.index()">@Messages("menu.home")</a></li>
                 <li class="@{if(active == 'showWorkoutLocations) "active" else "inactive"}"><a href="@routes.Report.showWorkoutLocations()">@Messages("menu.reports")</a></li>
              *@
-                <li class="@{if(active == 'admin) "active" else "inactive"}"><a href="@routes.WebApp.userList()">@Messages("menu.admin")</a></li>
-             @*   <li class="@{if(active == 'account) "active" else "inactive"}"><a href="@routes.WebApp.userEdit">@Messages("menu.account")</a></li> *@
+                <li class="@{if(active == 'admin) "active" else "inactive"}"><a href="@routes.MiscController.userList()">@Messages("menu.admin")</a></li>
+             @*   <li class="@{if(active == 'account) "active" else "inactive"}"><a href="@routes.MiscController.userEdit">@Messages("menu.account")</a></li> *@
                 <li class="@{if(active == 'contact) "active" else "inactive"}"><a href="">@Messages("menu.contact")</a></li>
                 @if(!session.get("email").isEmpty) {
-                    <li class="@{if(active == 'logout) "active" else "inactive"}"><a href="@routes.Auth.logout()">@Messages("menu.logout")</a></li>
+                    <li class="@{if(active == 'logout) "active" else "inactive"}"><a href="@routes.AuthController.logout()">@Messages("menu.logout")</a></li>
                 }
             </ul>
         </div>
