--- a/app/views/userEdit.scala.html
+++ b/app/views/userEdit.scala.html
@@ -18,7 +18,7 @@
 
     <div class="row">
         <div class="span8">
-            <form action="@routes.WebApp.userSubmit()"  method="POST" class="form-horizontal">
+            <form action="@routes.MiscController.userSubmit()"  method="POST" class="form-horizontal">
                 <fieldset>
                     <legend></legend>
                     <div class="control-group">
