--- a/app/views/userList.scala.html
+++ b/app/views/userList.scala.html
@@ -6,7 +6,7 @@
 * Helper generating navigation links    *
 ****************************************@
 @link(newPage: Int, newOrderBy: Option[Int] = None) = @{
-routes.WebApp.userList(newPage, newOrderBy.map { orderBy =>
+routes.MiscController.userList(newPage, newOrderBy.map { orderBy =>
 if(orderBy == scala.math.abs(currentOrderBy)) -currentOrderBy else orderBy
 }.getOrElse(currentOrderBy), currentFilter)
 
@@ -33,9 +33,9 @@ if(orderBy == scala.math.abs(currentOrderBy)) -currentOrderBy else orderBy
 
     <div class="row">
         <div class="span12">
-            <form action="@routes.WebApp.userList()" class="well form-search">
+            <form action="@routes.MiscController.userList()" class="well form-search">
 
-                <button id="add" class="btn btn-success pull-right" href="@routes.WebApp.userEdit(1)">@Messages("button.add.user")</button>
+                <button id="add" class="btn btn-success pull-right" href="@routes.MiscController.userEdit(1)">@Messages("button.add.user")</button>
 
                 <input type="search" name="f" id="searchbox" value="@currentFilter" class="input-medium search-query" placeholder="@Messages("userlist.filter.lastname")"  >
 
@@ -66,7 +66,7 @@ if(orderBy == scala.math.abs(currentOrderBy)) -currentOrderBy else orderBy
 
                 <td>@u.firstName</td>
 
-                <td><a href="@routes.WebApp.userEdit(u.id)">@u.email</a></td>
+                <td><a href="@routes.MiscController.userEdit(u.id)">@u.email</a></td>
 
                 <td>Admin</td>
                 </a>
