Finished converting existing controllers and reports to use new security architecture

--- a/app/views/gigya.scala.html
+++ b/app/views/gigya.scala.html
@@ -1,4 +1,4 @@
-@(request: play.api.mvc.Request[AnyContent])(implicit flash: play.api.mvc.Flash, session: play.api.mvc.Session)
+@(request: play.api.mvc.Request[AnyContent])(implicit rq: security.CtxRqst[_], flash: play.api.mvc.Flash)
 
 @main("Gigya Test", 'testLogin) {
 
