--- a/app/views/userEdit.scala.html
+++ b/app/views/userEdit.scala.html
@@ -1,4 +1,4 @@
-@(form: Form[User])(implicit flash: Flash, session: play.api.mvc.Session)
+@(form: Form[User])(implicit rq: security.CtxRqst[_], flash: Flash)
 
 @main("useredit.title", 'userEdit) {
 
