--- a/app/views/userList.scala.html
+++ b/app/views/userList.scala.html
@@ -1,4 +1,4 @@
-@(currentPage: Page[User], currentOrderBy: Int, currentFilter: String)(implicit flash: play.api.mvc.Flash, session: play.api.mvc.Session)
+@(currentPage: Page[User], currentOrderBy: Int, currentFilter: String)(implicit rq: security.CtxRqst[_], flash: play.api.mvc.Flash)
 
 @import helper._
 
