--- a/app/views/userEdit.scala.html
+++ b/app/views/userEdit.scala.html
@@ -4,16 +4,10 @@
 
     <h1>@Messages("useredit.title")</h1>
 
-    @form.globalError.map { error =>
-    <p class="alert alert-error">
-        @error.message
-    </p>
-    }
-
-    @flash.get("success").map { message =>
-    <div class="alert alert-success">
-        <strong>@Messages("login.flash.success")</strong> @message
-    </div>
+    @form.errors.map { error =>
+        <p class="alert alert-error">
+            <strong>Please correct:</strong> @error.message       @* form.errors.foreach(e => e.message) *@
+        </p>
     }
 
     <div class="row">
