--- a/app/views/userList.scala.html
+++ b/app/views/userList.scala.html
@@ -41,7 +41,7 @@ if(orderBy == scala.math.abs(currentOrderBy)) -currentOrderBy else orderBy
         <div class="span12">
             <form action="@routes.MiscController.userList()" class="well form-search">
 
-                <button id="add" class="btn btn-success pull-right" href="@routes.MiscController.userEdit(1)">@Messages("button.add.user")</button>
+                <button id="add" class="btn btn-success pull-right" href="@routes.MiscController.userAdd()">@Messages("button.add.user")</button>
 
                 <input type="search" name="f" id="searchbox" value="@currentFilter" class="input-medium search-query" placeholder="@Messages("userlist.filter.lastname")"  >
 
